--- a/MHSJ.Core/MHSJ.Core.csproj
+++ b/MHSJ.Core/MHSJ.Core.csproj
@@ -59,9 +59,12 @@
     <Compile Include="Data\DataSql.cs" />
     <Compile Include="Data\Interface\IUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\Account\Biz_AccountManager.cs" />
     <Compile Include="Service\Admin\Biz_PostManager.cs" />
     <Compile Include="Service\Admin\Biz_WordManager.cs" />
     <Compile Include="Service\Admin\PostManager.cs" />
+    <Compile Include="Service\Link\Biz_LinkManager.cs" />
+    <Compile Include="Service\MyCenter\Biz_CollectionManager.cs" />
     <Compile Include="Service\SettingManager.cs" />
     <Compile Include="Service\Admin\UserManager.cs" />
     <Compile Include="Service\Admin\WriterManager.cs" />
@@ -77,6 +80,7 @@
       <Name>MHSJ.Entity</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
